--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
     "build:jsx-for-server-side": "babel src/views/*.jsx --out-dir .",
     "stop-dev": "docker-compose -f compose-dev.yml stop",
     "stop-prod": "docker-compose -f compose-prod.yml stop",
-    "start": "docker-compose -p 6element -f compose-prod.yml up -d --force-recreate",
+    "prod": "docker-compose -p 6element -f compose-prod.yml up -d --force-recreate",
     "prestart": "npm run build-prod",
-    "serve-dev": "docker-compose -p 6element -f compose-dev.yml up --force-recreate",
+    "serve-dev": "docker-compose -p 6elementdev -f compose-dev.yml up --force-recreate",
     "start-dev": "npm-run-all --parallel serve-dev watch",
     "validate": "npm ls"
   },
