--- a/package.json
+++ b/package.json
@@ -63,7 +63,7 @@
     "gulp-babel": "^6.1.0",
     "jsdom": "^7.0.2",
     "leaflet": "^0.7.5",
-    "material-ui": "^0.14.0",
+    "material-ui": "0.14.0",
     "minifyify": "^7.1.0",
     "node-schedule": "^0.6.0",
     "opening_hours": "^3.3.0",
@@ -72,10 +72,10 @@
     "pg-hstore": "^2.3.2",
     "proj4": "^2.3.10",
     "query-string": "^3.0.0",
-    "react": "^0.14.0",
-    "react-dom": "^0.14.0-rc1",
-    "react-tap-event-plugin": "^0.2.1",
-    "reactify": "^1.1.1",
+    "react": "0.14.5",
+    "react-dom": "0.14.5",
+    "react-tap-event-plugin": "0.2.1",
+    "reactify": "1.1.1",
     "request": "^2.65.0",
     "socket.io": "^1.3.7",
     "socket.io-client": "^1.3.7",
