--- a/package.json
+++ b/package.json
@@ -7,14 +7,14 @@
     "lint": "eslint .",
     "watch": "babel client/views/*.jsx --out-dir . --watch",
     "build": "babel client/views/*.jsx --out-dir .",
-    "stop-dev": "docker-compose -p 6elementdev -f compose-dev.yml stop",
-    "stop-alpha": "docker-compose -f compose-alpha.yml stop",
+    "stop-dev": "docker-compose -p dev6element -f compose-dev.yml stop",
+    "stop-alpha": "docker-compose -p alpha6element -f compose-alpha.yml stop",
     "stop-prod": "docker-compose -f compose-prod.yml stop",
-    "prod": "docker-compose -p 6element -f compose-prod.yml up -d --force-recreate",
+    "prod": "docker-compose -p alpha6element -f compose-prod.yml up -d --force-recreate",
     "preprod": "npm run build",
-    "alpha": "docker-compose -p 6element-alpha -f compose-alpha.yml up -d --force-recreate",
+    "alpha": "docker-compose -p alpha6element -f compose-alpha.yml up -d --force-recreate",
     "prealpha": "npm run build",
-    "serve-dev": "docker-compose -p 6element-dev -f compose-dev.yml up --force-recreate",
+    "serve-dev": "docker-compose -p dev6element -f compose-dev.yml up --force-recreate",
     "dev": "npm-run-all --parallel serve-dev watch",
     "validate": "npm ls"
   },
