--- a/package.json
+++ b/package.json
@@ -69,12 +69,9 @@
     "babel-cli": "^6.2.0",
     "babel-preset-react": "^6.1.18",
     "eslint": "^1.3.1",
+    "eslint-plugin-react": "^3.15.0",
     "npm-run-all": "^1.3.4",
-    "precommit-hook-eslint": "^3.0.0",
     "reactify": "^1.1.1",
     "watchify": "^3.2.1"
-  },
-  "pre-commit": [
-    "lint"
-  ]
+  }
 }
