--- a/package.json
+++ b/package.json
@@ -48,12 +48,14 @@
     "core-js": "^1.2.1",
     "es6-shim": "^0.31.3",
     "express": "^4.12.4",
+    "geolib": "^2.0.18",
     "jsdom": "^7.0.2",
+    "moment": "^2.11.1",
+    "moment-timezone": "^0.5.0",
     "node-schedule": "^0.6.0",
     "opening_hours": "^3.3.0",
     "pg": "^4.4.2",
     "pg-hstore": "^2.3.2",
-    "geolib": "^2.0.18",
     "proj4": "^2.3.10",
     "query-string": "^3.0.0",
     "react": "0.14.5",
