--- a/package.json
+++ b/package.json
@@ -8,15 +8,10 @@
     "lint": "eslint .",
     "watch": "babel client/views/*.jsx --out-dir . --watch",
     "build": "babel client/views/*.jsx --out-dir .",
-    "stop-dev": "docker-compose -p dev6element -f compose-dev.yml stop",
-    "stop-alpha": "docker-compose -p alpha6element -f compose-alpha.yml stop",
-    "stop-prod": "docker-compose -f compose-prod.yml stop",
-    "prod": "docker-compose -f compose-prod.yml up -d --force-recreate",
+    "prod": "node server/index.js",
     "preprod": "npm run build",
-    "alpha": "docker-compose -p alpha6element -f compose-alpha.yml up -d --force-recreate",
-    "prealpha": "npm run build",
-    "serve-dev": "docker-compose -p dev6element -f compose-dev.yml up --force-recreate",
-    "dev": "npm-run-all --parallel serve-dev watch",
+    "monitor": "nodemon -L --watch server --watch client/*.js server/index.js",
+    "dev": "npm-run-all --parallel serve-dev watch monitor",
     "validate": "npm ls"
   },
   "babel": {
@@ -48,15 +43,12 @@
     "core-js": "^1.2.1",
     "es6-shim": "^0.31.3",
     "express": "^4.12.4",
-    "geolib": "^2.0.18",
     "jsdom": "^7.0.2",
     "moment": "^2.11.1",
     "moment-timezone": "^0.5.0",
-    "node-schedule": "^0.6.0",
     "opening_hours": "^3.3.0",
     "pg": "^4.4.2",
     "pg-hstore": "^2.3.2",
-    "proj4": "^2.3.10",
     "query-string": "^3.0.0",
     "react": "0.14.5",
     "react-dom": "0.14.5",
@@ -72,6 +64,7 @@
     "babel-preset-react": "^6.1.18",
     "eslint": "^1.3.1",
     "eslint-plugin-react": "^3.15.0",
+    "nodemon": "^1.8.1",
     "npm-run-all": "^1.3.4",
     "reactify": "^1.1.1",
     "watchify": "^3.2.1"
