--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "opening_hours": "^3.3.0",
     "pg": "^4.4.2",
     "pg-hstore": "^2.3.2",
+    "query-overpass": "^1.1.0",
     "query-string": "^3.0.0",
     "react": "0.14.5",
     "react-dom": "0.14.5",
@@ -57,6 +58,7 @@
     "socket.io-client": "^1.3.7",
     "sql": "^0.60.0",
     "sql-generate": "^1.1.0",
+    "turf-centroid": "^1.1.3",
     "vinyl-source-stream": "^1.1.0"
   },
   "devDependencies": {
