Adding new field "data_source"

--- a/PRIVATE.json.template
+++ b/PRIVATE.json.template
@@ -1,5 +1,6 @@
 {
     "secret": "fake",
+    "data_source": "http://foo",
     "pg_user": "postgres",
     "pg_pwd": "toto",
     "db_name": "element"
